prod.tf
provider "aws" {
  profile = "default"
  region  = "us-east-1"
}

resource "aws_s3_bucket" "prod_tf_course" {
  bucket = "tf-course-rafe-stefano"
  acl    = "private"
}

resource "aws_default_vpc" "default" {
  tags = {
    "Terraform" = "true"
    "Name"      = "Terraform"
  }
}

resource "aws_default_subnet" "default_az1" {
  availability_zone = "us-east-1a"

  tags = {
    "Terraform" = "true"
    "Name"      = "Terraform"
  }
}

resource "aws_default_subnet" "default_az2" {
  availability_zone = "us-east-1b"

  tags = {
    "Terraform" = "true"
    "Name"      = "Terraform"
  }
}

resource "aws_security_group" "prod_web" {
  name        = "prod_web"
  description = "Allow http/s inbound traffic"

  ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port   = 443
      to_port     = 443
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
      from_port       = 0
      to_port         = 0
      protocol        = "-1"
      cidr_blocks     = ["0.0.0.0/0"]
  }

  tags = {
    "Terraform" = "true"
    "Name"      = "Terraform"
  }
}

# resource "aws_instance" "prod_web" {
#   count         = 2
#   ami           = "ami-045805cfa04cb5a27"
#   instance_type = "t2.micro"
#   vpc_security_group_ids = [ aws_security_group.prod_web.id ]

#   tags = {
#     "Terraform" = "true"
#     "Name"      = "Terraform"
#   }
# }

# resource "aws_eip" "prod_web" {
#   tags = {
#     "Terraform" = "true"
#     "Name"      = "Terraform"
#   }
# }

# resource "aws_eip_association" "prod_web" {
#   instance_id = aws_instance.prod_web[0].id
#   allocation_id = aws_eip.prod_web.id
# }

resource "aws_elb" "prod_web" {
  name            = "prod-web"
  # instances       = aws_instance.prod_web.*.id
  subnets         = [ aws_default_subnet.default_az1.id, aws_default_subnet.default_az2.id ]
  security_groups = [ aws_security_group.prod_web.id ]

  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }

  tags = {
    "Terraform" = "true"
    "Name"      = "Terraform"
  }
}

resource "aws_launch_template" "prod_web" {
  name_prefix   = "prod-web"
  image_id      = "ami-045805cfa04cb5a27"
  instance_type = "t2.micro"

  tags = {
    "Terraform" = "true"
    "Name"      = "Terraform"
  }
}

resource "aws_autoscaling_group" "prod_web" {
  # availability_zones  = ["us-east-1a", "us-east-1b"]
  vpc_zone_identifier = [ aws_default_subnet.default_az1.id, aws_default_subnet.default_az2.id ]
  desired_capacity    = 1
  max_size            = 1
  min_size            = 1

  launch_template {
    id      = aws_launch_template.prod_web.id
    version = "$Latest"
  }

  tag {
    key                 = "Terraform"
    value               = "true"
    propagate_at_launch = true
  }
}

# Create a new load balancer attachment
resource "aws_autoscaling_attachment" "prod_web" {
  autoscaling_group_name = aws_autoscaling_group.prod_web.id
  elb                    = aws_elb.prod_web.id
}
